Clarify some things in the pivot table section

--- a/code/4-advanced-viz.ipynb
+++ b/code/4-advanced-viz.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "4     NaN  Neotoma  albigula  Rodent   Control  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "4        349  albigula     NaN   Control"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
        "14  merriami          Spectab exclosure   43.131443"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,12 +607,12 @@
    "source": [
     "Compare how this table is displayed with the table in the previous cell. It is certainly easier to spot differences between the species and plot types in this wide format.\n",
     "\n",
-    "Since presenting summary statistics in a wide format is such a common operation, `pandas` has a dedicated method, `pivot_table()`, that performs both the data aggregation and pivoting."
+    "Since presenting summary statistics in a wide format is such a common operation, `pandas` has a dedicated method, `pivot_table()`, that performs both the data aggregation (`groupby()`) and pivoting (`pivot()`)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
        "Spectab exclosure          157.842105  7.187500  43.131443"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -778,14 +778,14 @@
        "merriami -0.454296 -0.606458  1.000000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "surveys_sub_pvt = surveys_sub.pivot_table(index='plot_type', columns='species', values='weight')\n",
-    "surveys_sub_pvt.corr()"
+    "surveys_sub.pivot_table(\n",
+    "    index='plot_type', columns='species', values='weight').corr()"
    ]
   },
   {
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
        "merriami                   42.446251          43.131443  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -937,68 +937,69 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Control</th>\n",
-       "      <td>164.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>44.0</td>\n",
+       "      <td>88120.0</td>\n",
+       "      <td>3181.0</td>\n",
+       "      <td>284608.0</td>\n",
+       "      <td>375909.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Long-term Krat Exclosure</th>\n",
-       "      <td>161.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>23697.0</td>\n",
+       "      <td>4440.0</td>\n",
+       "      <td>9178.0</td>\n",
+       "      <td>37315.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Rodent Exclosure</th>\n",
-       "      <td>171.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>44.0</td>\n",
+       "      <td>23821.0</td>\n",
+       "      <td>427.0</td>\n",
+       "      <td>35172.0</td>\n",
+       "      <td>59420.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Short-term Krat Exclosure</th>\n",
-       "      <td>162.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>42.0</td>\n",
+       "      <td>35817.0</td>\n",
+       "      <td>3757.0</td>\n",
+       "      <td>46988.0</td>\n",
+       "      <td>86562.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Spectab exclosure</th>\n",
-       "      <td>157.5</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>44.0</td>\n",
+       "      <td>11996.0</td>\n",
+       "      <td>460.0</td>\n",
+       "      <td>66940.0</td>\n",
+       "      <td>79396.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>All</th>\n",
-       "      <td>164.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>44.0</td>\n",
+       "      <td>183451.0</td>\n",
+       "      <td>12265.0</td>\n",
+       "      <td>442886.0</td>\n",
+       "      <td>638602.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "species                    albigula  flavus  merriami   All\n",
-       "plot_type                                                  \n",
-       "Control                       164.0     8.0      44.0  44.0\n",
-       "Long-term Krat Exclosure      161.0     8.0      44.0   9.0\n",
-       "Rodent Exclosure              171.0     8.0      43.0  44.0\n",
-       "Short-term Krat Exclosure     162.0     8.0      43.0  42.0\n",
-       "Spectab exclosure             157.5     7.0      44.0  44.0\n",
-       "All                           164.0     8.0      44.0  44.0"
+       "species                    albigula   flavus  merriami       All\n",
+       "plot_type                                                       \n",
+       "Control                     88120.0   3181.0  284608.0  375909.0\n",
+       "Long-term Krat Exclosure    23697.0   4440.0    9178.0   37315.0\n",
+       "Rodent Exclosure            23821.0    427.0   35172.0   59420.0\n",
+       "Short-term Krat Exclosure   35817.0   3757.0   46988.0   86562.0\n",
+       "Spectab exclosure           11996.0    460.0   66940.0   79396.0\n",
+       "All                        183451.0  12265.0  442886.0  638602.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "surveys_sub.pivot_table(index='plot_type', columns='species', values='weight', margins=True, aggfunc='median')"
+    "surveys_sub.pivot_table(index='plot_type', columns='species',\n",
+    "                        values='weight', margins=True, aggfunc='sum')"
    ]
   },
   {
@@ -1014,98 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>species</th>\n",
-       "      <th>albigula</th>\n",
-       "      <th>flavus</th>\n",
-       "      <th>merriami</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>plot_type</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Control</th>\n",
-       "      <td>159.349005</td>\n",
-       "      <td>7.758537</td>\n",
-       "      <td>43.385366</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Long-term Krat Exclosure</th>\n",
-       "      <td>156.933775</td>\n",
-       "      <td>7.872340</td>\n",
-       "      <td>43.292453</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Rodent Exclosure</th>\n",
-       "      <td>168.943262</td>\n",
-       "      <td>8.056604</td>\n",
-       "      <td>42.324910</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Short-term Krat Exclosure</th>\n",
-       "      <td>155.051948</td>\n",
-       "      <td>8.221007</td>\n",
-       "      <td>42.446251</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Spectab exclosure</th>\n",
-       "      <td>157.842105</td>\n",
-       "      <td>7.187500</td>\n",
-       "      <td>43.131443</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "species                      albigula    flavus   merriami\n",
-       "plot_type                                                 \n",
-       "Control                    159.349005  7.758537  43.385366\n",
-       "Long-term Krat Exclosure   156.933775  7.872340  43.292453\n",
-       "Rodent Exclosure           168.943262  8.056604  42.324910\n",
-       "Short-term Krat Exclosure  155.051948  8.221007  42.446251\n",
-       "Spectab exclosure          157.842105  7.187500  43.131443"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "surveys_sub_pvt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1184,14 +1094,132 @@
        "4                Spectab exclosure  157.842105  7.187500  43.131443"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "surveys_sub_pvt = surveys_sub_pvt.reset_index()\n",
     "surveys_sub_pvt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>species</th>\n",
+       "      <th>plot_type</th>\n",
+       "      <th>albigula</th>\n",
+       "      <th>flavus</th>\n",
+       "      <th>merriami</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Control</td>\n",
+       "      <td>159.349005</td>\n",
+       "      <td>7.758537</td>\n",
+       "      <td>43.385366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Long-term Krat Exclosure</td>\n",
+       "      <td>156.933775</td>\n",
+       "      <td>7.872340</td>\n",
+       "      <td>43.292453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Rodent Exclosure</td>\n",
+       "      <td>168.943262</td>\n",
+       "      <td>8.056604</td>\n",
+       "      <td>42.324910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Short-term Krat Exclosure</td>\n",
+       "      <td>155.051948</td>\n",
+       "      <td>8.221007</td>\n",
+       "      <td>42.446251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Spectab exclosure</td>\n",
+       "      <td>157.842105</td>\n",
+       "      <td>7.187500</td>\n",
+       "      <td>43.131443</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "species                  plot_type    albigula    flavus   merriami\n",
+       "0                          Control  159.349005  7.758537  43.385366\n",
+       "1         Long-term Krat Exclosure  156.933775  7.872340  43.292453\n",
+       "2                 Rodent Exclosure  168.943262  8.056604  42.324910\n",
+       "3        Short-term Krat Exclosure  155.051948  8.221007  42.446251\n",
+       "4                Spectab exclosure  157.842105  7.187500  43.131443"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "surveys_sub_pvt = surveys_sub.pivot_table(\n",
+    "    index='plot_type', columns='species', values='weight').reset_index()\n",
+    "surveys_sub_pvt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that 'species' is not a column here, it is the name of that level of columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['plot_type', 'albigula', 'flavus', 'merriami'], dtype='object', name='species')"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "surveys_sub_pvt.columns"
    ]
   },
   {
@@ -1203,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1374,7 @@
        "14          Spectab exclosure  merriami   43.131443"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1500,7 @@
        "9          Spectab exclosure    flavus    7.187500"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,9 +1516,9 @@
    "source": [
     ">#### Challenge 1\n",
     ">\n",
-    ">1. Make a wide data frame with `year` as columns, `plot_id` as rows, where the values are the number of genera per plot. *Hint* Remember how `nunique()` from last lecture. You will also need to reset the index before pivoting.\n",
+    ">1. Calculate the number of unique species caught every `year` in each `plot_type`. *Hint:* Remember the `nunique()` method from last lecture.\n",
     ">\n",
-    ">2. Now take that data frame, and make it long again, so each row is a unique `plot_id` - `year` combination."
+    ">2. Reshape the wide data frame created in the previous task back into a long, tidy data frame. Each row should be a unique combination of `plot_type` and `year`. *Hint:* Remember to reset the data frame index to access the values in the index as a column."
    ]
   },
   {
