Update style challenge

--- a/code/4-advanced-viz.ipynb
+++ b/code/4-advanced-viz.ipynb
@@ -1930,7 +1930,7 @@
     "> #### Challenge 2\n",
     "> \n",
     "> 1. There are a plethora of colors available to use in `matplotlib`. Change the color of the line and the dots in the figure using [your favorite color from this list](https://stackoverflow.com/a/37232760/2166823).\n",
-    "> 2. Use the documentation to also change the styling of the line in the line plot and the type of marker used in the scatter plot (you might need to search online for this)."
+    "> 2. Use the documentation to change the styling of the line in the line plot and the type of marker used in the scatter plot (all styles can be found towards the end of the docstring for `plt.plot()`, view it using the object inspector or `?`)."
    ]
   },
   {
